RESOLVED FIXED25476
REGRESSION (r42987): Welcome to Safari 4 animation is jittery
https://bugs.webkit.org/show_bug.cgi?id=25476
Summary REGRESSION (r42987): Welcome to Safari 4 animation is jittery
mitz
Reported 2009-04-29 21:41:34 PDT
Animating images in the Welcome to Safari 4 animation jitter. This can be seen especially well with the "Welcome To Safari" text, where the letters appear to be bouncing up and down throughout the slow scale down effect. I have confirmed that the regression was caused by <http://trac.webkit.org/changeset/42987> (for bug 25458).
Attachments
Revert r42897 (196.65 KB, patch)
2009-04-30 09:27 PDT, mitz
simon.fraser: review+
mitz
Comment 1 2009-04-29 21:42:47 PDT
David Kilzer (:ddkilzer)
Comment 2 2009-04-30 05:38:17 PDT
It may be best just to back this out for now since it's a simple one-line change, unless there is a way to disable this specifically during animations.
Simon Fraser (smfr)
Comment 3 2009-04-30 09:10:06 PDT
The image code doesn't know that an animation is happening, so doing that would be hard. The real problem here is that you're rounding after a CSS transform has been applied (and the transform is being animated). Is there a way we can round only when we know that we're not inside a CSS transform? I think the change shoujld be backed for for now.
mitz
Comment 4 2009-04-30 09:27:40 PDT
mitz
Comment 5 2009-04-30 09:36:33 PDT
David Carson
Comment 6 2009-04-30 09:57:25 PDT
The original proposal for https://bugs.webkit.org/show_bug.cgi?id=25458 was to wrap it in #ifdef. I will propose a new patch that contains that contains that change.
Note You need to log in before you can comment on or make changes to this bug.