WebCore:

Reviewed by Simon Fraser.

        - fix https://bugs.webkit.org/show_bug.cgi?id=25476
          <rdar://problem/6841919> REGRESSION (r42987): Welcome to Safari 4
          animation is jittery

        Reverted r42987.

        * platform/graphics/cg/ImageCG.cpp:
        (WebCore::BitmapImage::draw):

LayoutTests:

        Reviewed by Simon Fraser.

        - updated results for https://bugs.webkit.org/show_bug.cgi?id=25476
          <rdar://problem/6841919> REGRESSION (r42987): Welcome to Safari 4
          animation is jittery

        * platform/mac/svg/W3C-SVG-1.1/render-groups-03-t-expected.checksum:
        * platform/mac/svg/W3C-SVG-1.1/render-groups-03-t-expected.png:
        * platform/mac/svg/custom/focus-ring-expected.checksum:
        * platform/mac/svg/custom/focus-ring-expected.png:
        * platform/mac/svg/custom/image-small-width-height-expected.checksum:
        * platform/mac/svg/custom/image-small-width-height-expected.png:



Canonical link: https://commits.webkit.org/35108@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@43062 268f45cc-cd09-0410-ab3c-d52691b4dbfc